Fix issue where offscreen rendering was causing overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* Global stylesheet */
 
+.App {
+    overflow: hidden;
+    position: relative;
+}
+
 p {
     margin: 0;
 }
@@ -39,3 +44,15 @@ body {
     /* Dimensions */
     --header-height: 8vh;
 }
+
+/* SCROLLBAR */
+
+/* Track */
+/* ::-webkit-scrollbar {
+    background-color: white;
+  }
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 8px;
+} */
